--- a/src/FilmCard/FilmCard.css
+++ b/src/FilmCard/FilmCard.css
@@ -1,163 +1,165 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@400;700&display=swap');
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding:0;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@400;700&display=swap");
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 .film-card {
-    position: relative;
-    width: 454px;
-    height: 281px;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+  position: relative;
+  width: 454px;
+  height: 281px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
 }
-.card-container{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    column-gap: 20px;
+.card-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 20px;
 }
 
-.card-image{
-    width: 185px ;
-    height: 281px;
-    object-fit: cover;
+.card-image {
+  width: 185px;
+  height: 281px;
+  object-fit: cover;
 }
-.card-title{
-    max-width: 200px;
-    margin: 12px 3px 7px 3px;
-    display: inline-block;
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 28px;
+.card-title {
+  max-width: 200px;
+  margin: 12px 3px 7px 3px;
+  display: inline-block;
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 28px;
 }
-.card-typography{
-    position: relative;
+.card-typography {
+  position: relative;
 }
-.card-average{
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top:11px;
-    right: 8px;
-    border: 2px solid rgba(233, 209, 0, 1);
-    border-radius: 100%;
-    font-size: 12px;
-    width: 30px;
-    height: 30px;
+.card-average {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 11px;
+  right: 8px;
+  border: 2px solid rgba(233, 209, 0, 1);
+  border-radius: 100%;
+  font-size: 12px;
+  width: 30px;
+  height: 30px;
 }
 
 .card-date {
-    color: #827E7E;
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 22px;
+  color: #827e7e;
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 22px;
 }
-.card-genre{
-    display: inline-block;
-    margin: 7px 8px 7px 0;
-    padding: 2px 4px 2px 5px;;
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 15px;
-    color: rgba(0, 0, 0, 0.65);
-    background: #FAFAFA;
-    border: 1px solid #D9D9D9;
-    border-radius: 2px;
+.card-genre {
+  display: inline-block;
+  margin: 7px 8px 7px 0;
+  padding: 2px 4px 2px 5px;
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: rgba(0, 0, 0, 0.65);
+  background: #fafafa;
+  border: 1px solid #d9d9d9;
+  border-radius: 2px;
 }
-.card-description{
-    margin: 0 24px 0 0;
+.card-description {
+  margin: 0 24px 0 0;
 }
 .card-description-text {
-    font-family: 'Inter';
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 19px;
-    color: #000000;
+  font-family: "Inter";
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 19px;
+  color: #000000;
 }
-.card-container-body{
-    position: static;
+.card-container-body {
+  position: static;
 }
 .ant-rate-star:not(:last-child) {
-    margin-right: 4px;
+  margin-right: 4px;
 }
-.card-stars{
-    position: absolute;
-    bottom: 10px;
+.card-stars {
+  position: absolute;
+  bottom: 10px;
 }
 .ant-rate-star > div:hover {
-    transform: scale(1);
+  transform: scale(1);
 }
 .ant-rate-star > div {
-    transition: none;
+  transition: none;
 }
-h5.ant-typography, div.ant-typography-h5, div.ant-typography-h5 > textarea{
-    margin-bottom: 0px;
+h5.ant-typography,
+div.ant-typography-h5,
+div.ant-typography-h5 > textarea {
+  margin-bottom: 0px;
 }
-@media (max-width:780px){
-    .grid-container{
-        margin-right: 0 20%;
-        row-gap: 20px;
-        padding: 10px 0px 40px 0;
-    }
-   
-    .film-card{
-        position: relative;
-        width: 387px;
-        height:245px;
-        margin: 0 auto;
-    }
-    .card-image{
-        float: left;
-        width: 60px ;
-        height: 91px;
-        margin-right: 13px;
-    }
-    .card-container{
-        padding: 6px 8px 0 10px;
-        display: block;
-    }
-    .card-title{
-        margin: 4px 3px;
-        margin-block-start: 0;
-        margin-block-end: 0;
-        max-width: 250px;
-    }
-    .ant-typography h5 {
-        margin: 0 0 7px 0;
-        max-height: 20px;
-        overflow: hidden;
-    }
-    .card-genre{
-        margin: 3px 8px 4px 0;
-    }
-    .card-description-text{
-        display: block;
-        clear:both;
-        
-        /* margin: 30px 0; */
-    }
-    .card-description-text{
-        padding-top: 10px;
-    }
-    .card-stars{
-        position: absolute;
-        transform: translate(124px, -5px);
-    }
-    .card-date{
-        margin: 0 0 10px 0
-    }
-    .film-card span:nth-child(7) {
-        margin-left: 73px ;
-    }
-    .card-average{
-        top:-4px;
-        right: -3px;
-    }
+@media (max-width: 780px) {
+  .grid-container {
+    margin-right: 0 20%;
+    row-gap: 20px;
+    padding: 10px 0px 40px 0;
+  }
+
+  .film-card {
+    position: relative;
+    width: 387px;
+    height: 245px;
+    margin: 0 auto;
+  }
+  .card-image {
+    float: left;
+    width: 60px;
+    height: 91px;
+    margin-right: 13px;
+  }
+  .card-container {
+    padding: 6px 8px 0 10px;
+    display: block;
+  }
+  .card-title {
+    margin: 4px 3px;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    max-width: 250px;
+  }
+  .ant-typography h5 {
+    margin: 0 0 7px 0;
+    max-height: 20px;
+    overflow: hidden;
+  }
+  .card-genre {
+    margin: 3px 8px 4px 0;
+  }
+  .card-description-text {
+    display: block;
+    clear: both;
+
+    /* margin: 30px 0; */
+  }
+  .card-description-text {
+    padding-top: 10px;
+  }
+  .card-stars {
+    position: absolute;
+    transform: translate(124px, -5px);
+  }
+  .card-date {
+    margin: 0 0 10px 0;
+  }
+  .film-card span:nth-child(7) {
+    margin-left: 73px;
+  }
+  .card-average {
+    top: -4px;
+    right: -3px;
+  }
 }
