--- a/src/MainHeader/MainHeader.css
+++ b/src/MainHeader/MainHeader.css
@@ -1,31 +1,31 @@
-.menu-container{
-    margin: 0 0 20px 0;
-    /* margin: 33px auto 20px 42%; */
-    height: 50px;
-    border-bottom: none;
-    display: block;
-    text-align: center;
+.menu-container {
+  margin: 0 0 20px 0;
+  /* margin: 33px auto 20px 42%; */
+  height: 50px;
+  border-bottom: none;
+  display: block;
+  text-align: center;
 }
 .menu-item {
-    padding: 10px;
-    margin:0;
-    border-bottom: 1px solid rgba(217, 217, 217, 1);
+  padding: 10px;
+  margin: 0;
+  border-bottom: 1px solid rgba(217, 217, 217, 1);
 }
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item{
-    padding: 0 10px;
+.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item {
+  padding: 0 10px;
 }
-.ant-menu-horizontal > .ant-menu-item::after{
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    right: 5px;
-    left: 0px;
-    border-bottom: 2px solid transparent;
-    transition: border-color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-    content: '';
+.ant-menu-horizontal > .ant-menu-item::after {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  right: 5px;
+  left: 0px;
+  border-bottom: 2px solid transparent;
+  transition: border-color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  content: "";
 }
-@media(max-width:780px){
-    .menu-container{
-        margin: 0 0 17px 0;
-    }
+@media (max-width: 780px) {
+  .menu-container {
+    margin: 0 0 17px 0;
+  }
 }
